<resources>
    <string name="app_name">Smart home</string>
    <string name="ho_chi_minh">Ho Chi Minh</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="cristiano">Cristiano</string>
    <string name="lamp">Room Light</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="tv_lg">TV LG</string>
    <string name="_2_device">2 Device</string>
    <string name="toshiba_ac">Toshiba AC</string>
    <string name="lg_fan">LG Fan</string>
    <string name="main_light">Home Light</string>
    <string name="living_room">Living Room</string>
    <string name="notify">Notify</string>
    <string name="add">Add</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="out_door">Outdoor</string>
    <string name="bed_room">Bed Room</string>
    <string name="bathroom">Bath Room</string>
    <string name="outdoor">Outdoor</string>
    <string name="bedroom">Bed room</string>
    <string name="cctv">CCTV</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="log_out">log out</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="_25_c">25°C</string>
    <string name="_24_c">24°C</string>
    <string name="_50">50%</string>
    <string name="_80">80%</string>
    <string name="visualize">Visualize</string>
    <string name="setting">Setting</string>
    <string name="dashboard">Dashboard</string>
    <string name="chart">Chart</string>
    <string name="spinner">Spinner</string>
    <string name="dining_room">Dining Room</string>
    <string name="your_username">Your username</string>
    <string name="status">Status</string>
    <string name="status_image">status_image</string>
    <string name="send_edit_text">Send Edit text</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="hello">Hello</string>
    <string name="receiver">Message Receive:</string>
    <string name="sender">Message Send:</string>
</resources>