<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CCTVActivity">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ronaldo" />

        <RelativeLayout
            android:id="@+id/relative_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_welcome_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_welcome_home"
                android:layout_marginStart="5dp"
                android:text="@string/cristiano"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                >

                <ImageButton
                    android:id="@+id/notification_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/noti"
                    android:contentDescription="@string/notify"/>

                <ImageButton
                    android:id="@+id/add_img_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add"
                    android:contentDescription="@string/add"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My CCTV"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:layout_marginTop="57dp"
        android:textStyle="bold"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="267dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/cctv_img"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Out door"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textStyle="bold"/>


</LinearLayout>