<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/custom_gray"

        android:orientation="horizontal"
        android:padding="6dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_avatar" />

        <RelativeLayout
            android:id="@+id/relative_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_welcome_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/welcome_home"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_welcome_home"
                android:layout_marginStart="5dp"
                android:text="@string/cristiano"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <ImageButton
                    android:id="@+id/notification_img_btn"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:background="#EAEAEA"
                    android:backgroundTint="@color/custom_gray"
                    android:contentDescription="@string/notify"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_notification"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/btn_log_out"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:background="#EAEAEA"
                    android:backgroundTint="@color/custom_gray"
                    android:contentDescription="@string/log_out"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_logout"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            app:itemBackground="@color/custom_gray"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_navigation" />
    </RelativeLayout>
</LinearLayout>